# genome-viewer

./: .gitignore  Cargo.toml  README.md  example-config.json
examples/: demo.bed  demo.gtf
src/: config.rs  main.rs  model.rs  tracks.rs
static/: index.html
