[package]
name = "genome_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json", "macros"] }
bigtools = { version = "0.5", default-features = false, features = ["read"] }
clap = { version = "4.5", features = ["derive"] }
flate2 = "1"
http-range-client = { version = "0.9", default-features = false, features = ["reqwest-sync"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
getrandom = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shellexpand = "3"
subtle = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
